<resources>
    <string name="app_name">BirdFeed</string>
    <string name="button_search">Search</string>
    <string name="button_settings">Settings</string>
    <string name="button_name">Search by Name</string>
    <string name="button_nearest">Closest Food</string>
    <string name="welcome">Hello, "User"!</string>
    <string name="message">What would you like to eat today?</string>
</resources>
