<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.httpstwitter.birdfeed.Menu"
    android:background="@color/colorbkgd">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="35dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/welcome" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/message" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:text="@string/button_search"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"/>

    <Button
        android:id="@+id/search_nearest"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:text="@string/button_nearest"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/search_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:text="@string/button_name"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:text="@string/button_settings"
        android:background="@drawable/button"
        android:textColor="@android:color/white"
        android:textSize="20dp"/>
</LinearLayout>
